# mcp-pytest-runner

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr-title-check.yml  release-please.yml  release-pr.yml  release-publish.yml  release.yml
src/mcp_pytest_runner/: __init__.py  domain.py  main.py
src/pytest_mcp/: main.py
tests/: test_main.py
